--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   build:
     runs-on: windows-2025
+    permissions:
+      contents: write
     steps:
       - name: Checkout
         uses: actions/checkout@v4
