--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,12 +23,11 @@ jobs:
             Copy-Item -Path "${{github.workspace}}\bin\Release\net9.0\win-x64\native\*" -Destination "${{github.workspace}}\bin\lib\" -Recurse -Force
       - name: Zip release
         shell: pwsh
-        run: Compress-Archive -Path '${{github.workspace}}\include','${{github.workspace}}\bin\lib' -DestinationPath '${{github.workspace}}\release.zip' -Force
+        run: Compress-Archive -Path '${{github.workspace}}\include','${{github.workspace}}\bin\lib', '${{github.workspace}}\CMakeLists.txt', '${{github.workspace}}\LICENSE' -DestinationPath '${{github.workspace}}\JSR-SDK-${{ github.ref_name }}.zip' -Force
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ github.ref_name }}
           name: ${{ github.ref_name }}
-          files: |
-             ${{github.workspace}}\release.zip
-             ${{github.workspace}}\LICENSE
+          files: ${{github.workspace}}\JSR-SDK-${{ github.ref_name }}.zip
+             
