--- a/JSR-SDK.csproj
+++ b/JSR-SDK.csproj
@@ -12,11 +12,41 @@
     <OutputType>Library</OutputType>
     <InvariantGlobalization>true</InvariantGlobalization>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <EnableDefaultCompileItems>false</EnableDefaultCompileItems>
   </PropertyGroup>
+  
+  <ItemGroup>
+    <!-- Only include C# files under src -->
+    <Compile Include="src\**\*.cs" />
+  </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="CyUSB">
+      <HintPath>external\JSRDotNETSDK_1.2.14\Plugins\CyUSB.dll</HintPath>
+    </Reference>
+    <Reference Include="JSRDotNETDPR">
+      <HintPath>external\JSRDotNETSDK_1.2.14\Plugins\JSRDotNETDPR.dll</HintPath>
+    </Reference>
     <Reference Include="JSRDotNETSDK">
       <HintPath>external\JSRDotNETSDK_1.2.14\Libs\JSRDotNETSDK.dll</HintPath>
+    </Reference>
+    <Reference Include="JSRDotNET_Diag">
+      <HintPath>external\JSRDotNETSDK_1.2.14\Plugins\JSRDotNET_Diag.dll</HintPath>
+    </Reference>
+    <Reference Include="JSRDotNET_USB_Common">
+      <HintPath>external\JSRDotNETSDK_1.2.14\Plugins\JSRDotNET_USB_Common.dll</HintPath>
+    </Reference>
+    <Reference Include="JSRDotNET_USB_DPR650">
+      <HintPath>external\JSRDotNETSDK_1.2.14\Plugins\JSRDotNET_USB_DPR650.dll</HintPath>
+    </Reference>
+    <Reference Include="JSRDotNET_USB_PureViewHid">
+      <HintPath>external\JSRDotNETSDK_1.2.14\Plugins\JSRDotNET_USB_PureViewHid.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>external\JSRDotNETSDK_1.2.14\Plugins\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="SimpleHID">
+      <HintPath>external\JSRDotNETSDK_1.2.14\Plugins\SimpleHID.dll</HintPath>
     </Reference>
   </ItemGroup>
 
@@ -25,7 +55,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="external\" />
+    <PackageReference Include="System.Resources.Extensions" Version="9.0.5" />
   </ItemGroup>
-
 </Project>
