--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,17 +13,19 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Build
-        shell: pwsh
-        run: dotnet publish -c Release
-      - name: Copy libraries to lib directory
-        shell: pwsh
-        run: |
-            New-Item -ItemType Directory -Force -Path "${{github.workspace}}\bin\lib\"
-            Copy-Item -Path "${{github.workspace}}\bin\Release\net9.0\win-x64\native\*" -Destination "${{github.workspace}}\bin\lib\" -Recurse -Force
+      - name: Add msbuild to PATH
+        uses: microsoft/setup-msbuild@v2
+      - name: Build x64 dynamic library
+        run: msbuild ${{github.workspace}}\JSR-SDK.vcxproj -t:Rebuild -p:Configuration=dynamic -p:Platform=x64
+      - name: Build x86 dynamic library
+        run: msbuild ${{github.workspace}}\JSR-SDK.vcxproj -t:Rebuild -p:Configuration=dynamic -p:Platform=Win32
+      - name: Build x64 static library
+        run: msbuild ${{github.workspace}}\JSR-SDK.vcxproj -t:Rebuild -p:Configuration=static -p:Platform=x64
+      - name: Build x86 static library
+        run: msbuild ${{github.workspace}}\JSR-SDK.vcxproj -t:Rebuild -p:Configuration=static -p:Platform=Win32
       - name: Zip release
         shell: pwsh
-        run: Compress-Archive -Path '${{github.workspace}}\include','${{github.workspace}}\bin\lib', '${{github.workspace}}\CMakeLists.txt', '${{github.workspace}}\LICENSE' -DestinationPath '${{github.workspace}}\JSR-SDK-${{ github.ref_name }}.zip' -Force
+        run: Compress-Archive -Path '${{github.workspace}}\include','${{github.workspace}}\lib', '${{github.workspace}}\CMakeLists.txt', '${{github.workspace}}\LICENSE' -DestinationPath '${{github.workspace}}\JSR-SDK-${{ github.ref_name }}.zip' -Force
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
