Include the JSR plugins in the lib export

--- a/JSR-SDK.vcxproj
+++ b/JSR-SDK.vcxproj
@@ -164,4 +164,18 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <Target Name="CopyPluginsIfChanged" AfterTargets="Build">
+    <ItemGroup>
+      <PluginSourceFiles Include="external\JSRDotNETSDK_1.2.14\Plugins\*" />
+    </ItemGroup>
+
+    <Message Importance="high" Text="Checking for plugin changes in external\jsr\plugins..." />
+
+    <Copy
+      SourceFiles="@(PluginSourceFiles)"
+      DestinationFiles="@(PluginSourceFiles->'lib\plugins\%(RecursiveDir)%(Filename)%(Extension)')"
+      SkipUnchangedFiles="true"
+    />
+  </Target>
+
 </Project>
