--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ else()
     set(ARCH_DIR "Win32")
 endif()
 
+set(JSR_SDK_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/include")
+set(JSR_SDK_PLUGINS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins")
 
 
 add_library(JSR-SDK SHARED IMPORTED GLOBAL)
@@ -24,19 +26,17 @@ if(JSR_SDK_USE_DYNAMIC_LIB)
    set_target_properties(JSR-SDK PROPERTIES
     IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCH_DIR}/dynamic/JSR-SDK.dll"
     IMPORTED_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCH_DIR}/dynamic/JSR-SDK.lib"
-    INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include"
+    INTERFACE_INCLUDE_DIRECTORIES "${JSR_SDK_INCLUDE_DIR}"
    )
 else()
     message(STATUS "Adding JSR-SDK static library ${ARCH_DIR}")
     set_target_properties(JSR-SDK PROPERTIES
       IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCH_DIR}/static/JSR-SDK.lib"
-      INTERFACE_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/include"
+      INTERFACE_INCLUDE_DIRECTORIES "${JSR_SDK_INCLUDE_DIR}"
     )
 endif()
 
-target_include_directories(JSR-SDK INTERFACE
-    "${CMAKE_CURRENT_SOURCE_DIR}/include"
-)
+target_include_directories(JSR-SDK INTERFACE "${JSR_SDK_INCLUDE_DIR}")
 
-install(IMPORTED_RUNTIME_ARTIFACTS JSRSDK DESTINATION ${CMAKE_INSTALL_BINDIR})
+install(IMPORTED_RUNTIME_ARTIFACTS JSR-SDK DESTINATION ${CMAKE_INSTALL_BINDIR})
 
