Automatically find the plugins after an installation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ if(JSR_SDK_USE_DYNAMIC_LIB)
     IMPORTED_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCH_DIR}/dynamic/JSR-SDK.lib"
     INTERFACE_INCLUDE_DIRECTORIES "${JSR_SDK_INCLUDE_DIR}"
    )
+    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCH_DIR}/dynamic/JSRDotNETSDK.dll" DESTINATION ${JSR_SDK_INCLUDE_DIR})
 else()
     message(STATUS "Adding JSR-SDK static library ${ARCH_DIR}")
     set_target_properties(JSR-SDK PROPERTIES
@@ -35,9 +36,14 @@ else()
       IMPORTED_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCH_DIR}/static/JSR-SDK.lib"
       INTERFACE_INCLUDE_DIRECTORIES "${JSR_SDK_INCLUDE_DIR}"
     )
+    install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCH_DIR}/static/JSRDotNETSDK.dll" DESTINATION ${JSR_SDK_INCLUDE_DIR})
 endif()
 
 target_include_directories(JSR-SDK INTERFACE "${JSR_SDK_INCLUDE_DIR}")
 
 install(IMPORTED_RUNTIME_ARTIFACTS JSR-SDK DESTINATION ${CMAKE_INSTALL_BINDIR})
+
+file(GLOB JRS_SDK_PLUGINS CONFIGURE_DEPENDS
+     "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/*.dll")
+install(FILES ${JRS_SDK_PLUGINS} DESTINATION ${JSR_SDK_INCLUDE_DIR}/plugins)
 
