--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,10 @@ set(JSR_SDK_PLUGINS_DIR "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins")
 
 
 add_library(JSR-SDK SHARED IMPORTED GLOBAL)
+add_library(JSRDotNETSDK SHARED IMPORTED GLOBAL)
+set_target_properties(JSRDotNETSDK PROPERTIES IMPORTED_IMPLIB "${JSR_SDK_PLUGINS_DIR}/JSRDotNETSDK.lib")
+target_link_libraries(JSR-SDK INTERFACE JSRDotNETSDK)
+
 
 if(JSR_SDK_USE_DYNAMIC_LIB)
    message(STATUS "Adding JSR-SDK dynamic library ${ARCH_DIR}")
@@ -28,6 +32,8 @@ if(JSR_SDK_USE_DYNAMIC_LIB)
     IMPORTED_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCH_DIR}/dynamic/JSR-SDK.lib"
     INTERFACE_INCLUDE_DIRECTORIES "${JSR_SDK_INCLUDE_DIR}"
    )
+   set_target_properties(JSRDotNETSDK PROPERTIES
+    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCH_DIR}/dynamic/JSRDotNETSDK.dll")
 else()
     message(STATUS "Adding JSR-SDK static library ${ARCH_DIR}")
     set_target_properties(JSR-SDK PROPERTIES
@@ -35,6 +41,8 @@ else()
       IMPORTED_IMPLIB "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCH_DIR}/static/JSR-SDK.lib"
       INTERFACE_INCLUDE_DIRECTORIES "${JSR_SDK_INCLUDE_DIR}"
     )
+    set_target_properties(JSRDotNETSDK PROPERTIES
+    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/${ARCH_DIR}/static/JSRDotNETSDK.dll")
 endif()
 
 target_include_directories(JSR-SDK INTERFACE "${JSR_SDK_INCLUDE_DIR}")
@@ -44,59 +52,59 @@ install(IMPORTED_RUNTIME_ARTIFACTS JSR-SDK DESTINATION ${CMAKE_INSTALL_BINDIR})
 
 add_library(CyUSB SHARED IMPORTED GLOBAL)
 set_target_properties(CyUSB PROPERTIES
-    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/CyUSB.dll"
-    IMPORTED_IMPLIB   "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/CyUSB.lib")
+    IMPORTED_LOCATION "${JSR_SDK_PLUGINS_DIR}/CyUSB.dll"
+    IMPORTED_IMPLIB   "${JSR_SDK_PLUGINS_DIR}/CyUSB.lib")
 
 target_link_libraries(JSR-SDK INTERFACE CyUSB)
 
 add_library(JSRDotNET_Diag SHARED IMPORTED GLOBAL)
 set_target_properties(JSRDotNET_Diag PROPERTIES
-    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/JSRDotNET_Diag.dll"
-    IMPORTED_IMPLIB   "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/JSRDotNET_Diag.lib")
+    IMPORTED_LOCATION "${JSR_SDK_PLUGINS_DIR}/JSRDotNET_Diag.dll"
+    IMPORTED_IMPLIB   "${JSR_SDK_PLUGINS_DIR}/JSRDotNET_Diag.lib")
 
 target_link_libraries(JSR-SDK INTERFACE JSRDotNET_Diag)
 
 
 add_library(JSRDotNET_USB_Common SHARED IMPORTED GLOBAL)
 set_target_properties(JSRDotNET_USB_Common PROPERTIES
-    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/JSRDotNET_USB_Common.dll"
-    IMPORTED_IMPLIB   "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/JSRDotNET_USB_Common.lib")
+    IMPORTED_LOCATION "${JSR_SDK_PLUGINS_DIR}/JSRDotNET_USB_Common.dll"
+    IMPORTED_IMPLIB   "${JSR_SDK_PLUGINS_DIR}/JSRDotNET_USB_Common.lib")
 
 target_link_libraries(JSR-SDK INTERFACE JSRDotNET_USB_Common)
 
 add_library(JSRDotNET_USB_DPR650 SHARED IMPORTED GLOBAL)
 set_target_properties(JSRDotNET_USB_DPR650 PROPERTIES
-    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/JSRDotNET_USB_DPR650.dll"
-    IMPORTED_IMPLIB   "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/JSRDotNET_USB_DPR650.lib")
+    IMPORTED_LOCATION "${JSR_SDK_PLUGINS_DIR}/JSRDotNET_USB_DPR650.dll"
+    IMPORTED_IMPLIB   "${JSR_SDK_PLUGINS_DIR}/JSRDotNET_USB_DPR650.lib")
 
 target_link_libraries(JSR-SDK INTERFACE JSRDotNET_USB_DPR650)
 
 add_library(JSRDotNET_USB_PureViewHid SHARED IMPORTED GLOBAL)
 set_target_properties(JSRDotNET_USB_PureViewHid PROPERTIES
-    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/JSRDotNET_USB_PureViewHid.dll"
-    IMPORTED_IMPLIB   "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/JSRDotNET_USB_PureViewHid.lib")
+    IMPORTED_LOCATION "${JSR_SDK_PLUGINS_DIR}/JSRDotNET_USB_PureViewHid.dll"
+    IMPORTED_IMPLIB   "${JSR_SDK_PLUGINS_DIR}/JSRDotNET_USB_PureViewHid.lib")
 
 target_link_libraries(JSR-SDK INTERFACE JSRDotNET_USB_PureViewHid)
 
 add_library(JSRDotNETDPR SHARED IMPORTED GLOBAL)
 set_target_properties(JSRDotNETDPR PROPERTIES
-    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/JSRDotNETDPR.dll"
-    IMPORTED_IMPLIB   "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/JSRDotNETDPR.lib")
+    IMPORTED_LOCATION "${JSR_SDK_PLUGINS_DIR}/JSRDotNETDPR.dll"
+    IMPORTED_IMPLIB   "${JSR_SDK_PLUGINS_DIR}/JSRDotNETDPR.lib")
 
 target_link_libraries(JSR-SDK INTERFACE JSRDotNETDPR)
 
 
 add_library(Newtonsoft.Json SHARED IMPORTED GLOBAL)
 set_target_properties(Newtonsoft.Json PROPERTIES
-    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/Newtonsoft.Json.dll"
-    IMPORTED_IMPLIB   "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/Newtonsoft.Json.lib")
+    IMPORTED_LOCATION "${JSR_SDK_PLUGINS_DIR}/Newtonsoft.Json.dll"
+    IMPORTED_IMPLIB   "${JSR_SDK_PLUGINS_DIR}/Newtonsoft.Json.lib")
 
 target_link_libraries(JSR-SDK INTERFACE Newtonsoft.Json)
 
 
 add_library(SimpleHID SHARED IMPORTED GLOBAL)
 set_target_properties(SimpleHID PROPERTIES
-    IMPORTED_LOCATION "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/SimpleHID.dll"
-    IMPORTED_IMPLIB   "${CMAKE_CURRENT_SOURCE_DIR}/lib/plugins/SimpleHID.lib")
+    IMPORTED_LOCATION "${JSR_SDK_PLUGINS_DIR}/SimpleHID.dll"
+    IMPORTED_IMPLIB   "${JSR_SDK_PLUGINS_DIR}/SimpleHID.lib")
 
 target_link_libraries(JSR-SDK INTERFACE SimpleHID)
