--- a/JSR-SDK.vcxproj
+++ b/JSR-SDK.vcxproj
@@ -23,10 +23,12 @@
     <ClCompile Include="src\MarshalTypes.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\JSR-SDK\enums\TriggerSource.h" />
     <ClInclude Include="include\JSR-SDK\InstrumentID.h" />
     <ClInclude Include="include\JSR-SDK\JSRLibMetadata.h" />
     <ClInclude Include="include\JSR-SDK\JSRSDKManager.h" />
     <ClInclude Include="include\JSR-SDK\PulserReceiverID.h" />
+    <ClInclude Include="include\JSR-SDK\enums\ReceiverMode.h" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="JSRDotNETSDK">
