Added large majority of remaining variable conversions

--- a/JSR-SDK.vcxproj
+++ b/JSR-SDK.vcxproj
@@ -23,6 +23,10 @@
     <ClCompile Include="src\MarshalTypes.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="include\JSR-SDK\enums\IsPulsing.h" />
+    <ClInclude Include="include\JSR-SDK\enums\PowerLimit.h" />
+    <ClInclude Include="include\JSR-SDK\enums\PulserImpedance.h" />
+    <ClInclude Include="include\JSR-SDK\enums\TriggerImpedance.h" />
     <ClInclude Include="include\JSR-SDK\enums\TriggerPolarity.h" />
     <ClInclude Include="include\JSR-SDK\enums\TriggerSource.h" />
     <ClInclude Include="include\JSR-SDK\InstrumentID.h" />
