--- a/JSR-SDK.vcxproj
+++ b/JSR-SDK.vcxproj
@@ -24,6 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\JSR-SDK\enums\IsPulsing.h" />
+    <ClInclude Include="include\JSR-SDK\enums\ManagerState.h" />
     <ClInclude Include="include\JSR-SDK\enums\PowerLimit.h" />
     <ClInclude Include="include\JSR-SDK\enums\PulserImpedance.h" />
     <ClInclude Include="include\JSR-SDK\enums\TriggerImpedance.h" />
